styles/projects.css
/*
  STYLING THE PROJECTS PAGE
  -- container
*/

#projects main {
  margin-bottom: 3rem;
}

#projects h2 {
  margin-bottom: 1.5rem;
}

.projects-container {
  width: 100%;
}

.cover-container, .project-description {
  display: inline-block;
  width: 45%;
}

.cover-container img {
  width: 100%;
}

/*
  STYLING THE PROJECTS PAGE
  -- project title
*/

.project-title h3, .project-title a {
  display: inline-block;
}

.project-title a {
  font-size: 1rem;
  margin-left: 0.5rem;
  color: #191919;
}

.project-title a:hover, .fa-circle-exclamation {
  color: gray;
}

/*
  STYLING THE PROJECTS PAGE
  -- project notice and popup
*/

.notice {
  margin-bottom: 1.5rem;
  position: relative;
  max-width: 13rem;
}

.notice p {
  font-size: 0.9rem;
}

.note-popup {
  display: none;
  z-index: 1;
  background-color: gray;
  color: #FFF;
  text-align: left;
  width: 8.5rem;
  border-radius: 0.2rem;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  bottom: 0;
  transform: translateX(100%);
}

/*
  STYLING THE PROJECTS PAGE
  -- description container
*/

.description-container p {
  text-align: justify;
  line-height: 1.5;
}

/*
  RESPONSIVE PROPERTIES
*/

@media only screen and (max-width: 840px) {
  .cover-container, .project-description {
    display: block;
    width: 100%;
  }
}

